--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.6.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-preprocess": "^4.10.2",
-    "tailwindcss": "^3.0.15"
-  },
-  "dependencies": {
-    "sirv-cli": "^2.0.0",
-    "svelte-navigator": "^3.1.5"
-  }
+    "name": "svelte-app",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "build": "rollup -c",
+        "dev": "rollup -c -w -s",
+        "start": "sirv public -s --no-clear "
+    },
+    "devDependencies": {
+        "@rollup/plugin-commonjs": "^17.0.0",
+        "@rollup/plugin-image": "^2.1.1",
+        "@rollup/plugin-node-resolve": "^11.0.0",
+        "autoprefixer": "^10.4.2",
+        "postcss": "^8.4.5",
+        "prettier": "^2.5.1",
+        "prettier-plugin-svelte": "^2.6.0",
+        "rollup": "^2.3.4",
+        "rollup-plugin-css-only": "^3.1.0",
+        "rollup-plugin-livereload": "^2.0.0",
+        "rollup-plugin-svelte": "^7.0.0",
+        "rollup-plugin-terser": "^7.0.0",
+        "svelte": "^3.0.0",
+        "svelte-preprocess": "^4.10.2",
+        "tailwindcss": "^3.0.15"
+    },
+    "dependencies": {
+        "firebase": "^9.6.4",
+        "rxfire": "^6.0.3",
+        "rxjs": "^7.5.2",
+        "sirv-cli": "^2.0.0",
+        "svelte-forms": "^2.1.0",
+        "svelte-routing": "^1.6.0",
+        "tailwindcss-animation-delay": "^1.0.7"
+    }
 }
