--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,3 +1,5 @@
+image:node:lts
+
 pipelines:
   default:
     - step:
@@ -11,6 +13,6 @@ pipelines:
         name: Deploy to Firebase
         deployment: production
         script:
-          - pipe: atlassian/firebase-deploy:0.2.1
+          - pipe: atlassian/firebase-deploy:1.3.0
             variables:
               FIREBASE_TOKEN: $FIREBASE_TOKEN
