bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,3 +17,4 @@ pipelines:
             variables:
               FIREBASE_TOKEN: $FIREBASE_TOKEN
               EXTRA_ARGS: '--only hosting'
+              DEBUG: 'true'
