--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-image": "^2.1.1",
         "@rollup/plugin-node-resolve": "^13.1.3",
-        "autoprefixer": "^10.4.2",
         "postcss": "^8.4.7",
         "prettier": "^2.5.1",
         "prettier-plugin-svelte": "^2.6.0",
@@ -21,18 +20,15 @@
         "rollup-plugin-svelte": "^7.1.0",
         "rollup-plugin-terser": "^7.0.2",
         "svelte": "^3.46.4",
-        "svelte-preprocess": "^4.10.4",
-        "tailwindcss": "^3.0.23"
+        "svelte-fullpage": "^0.3.1",
+        "svelte-preprocess": "^4.10.4"
     },
     "dependencies": {
         "firebase": "^9.6.7",
-        "fullpage.js": "^3.1.2",
         "rxfire": "^6.0.3",
         "rxjs": "^7.5.4",
         "sirv-cli": "^2.0.2",
         "svelte-forms": "^2.2.1",
-        "svelte-fullpage": "^0.3.1",
-        "svelte-routing": "^1.6.0",
-        "tailwindcss-animation-delay": "^1.0.7"
+        "svelte-routing": "^1.6.0"
     }
 }
