--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-image": "^2.1.1",
         "@rollup/plugin-node-resolve": "^13.1.3",
-        "postcss": "^8.4.7",
+        "postcss": "^8.4.8",
         "prettier": "^2.5.1",
         "prettier-plugin-svelte": "^2.6.0",
-        "rollup": "^2.68.0",
+        "rollup": "^2.70.0",
         "rollup-plugin-css-only": "^3.1.0",
         "rollup-plugin-livereload": "^2.0.5",
         "rollup-plugin-svelte": "^7.1.0",
@@ -24,9 +24,10 @@
         "svelte-preprocess": "^4.10.4"
     },
     "dependencies": {
-        "firebase": "^9.6.7",
+        "@firebase/testing": "^0.20.11",
+        "firebase": "^9.6.8",
         "rxfire": "^6.0.3",
-        "rxjs": "^7.5.4",
+        "rxjs": "^7.5.5",
         "sirv-cli": "^2.0.2",
         "svelte-forms": "^2.2.1",
         "svelte-routing": "^1.6.0"
