--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-image": "^2.1.1",
         "@rollup/plugin-node-resolve": "^13.1.3",
+        "jest": "^27.5.1",
         "postcss": "^8.4.8",
         "prettier": "^2.5.1",
         "prettier-plugin-svelte": "^2.6.0",
@@ -24,7 +25,7 @@
         "svelte-preprocess": "^4.10.4"
     },
     "dependencies": {
-        "@firebase/testing": "^0.20.11",
+        "@firebase/rules-unit-testing": "^2.0.2",
         "firebase": "^9.6.8",
         "rxfire": "^6.0.3",
         "rxjs": "^7.5.5",
