--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "scripts": {
         "build": "rollup -c",
         "dev": "rollup -c -w -s",
-        "start": "sirv public -s --no-clear "
+        "start": "sirv public -s --no-clear",
+        "emulator": "firebase emulators:start --only firestore",
+        "test": "jest tests"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-image": "^2.1.1",
         "@rollup/plugin-node-resolve": "^13.1.3",
+        "@types/jest": "^27.4.1",
         "jest": "^27.5.1",
         "postcss": "^8.4.8",
         "prettier": "^2.5.1",
